# flotilla

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  cmux-controller  dylint.toml  example-workspace.yaml  rustfmt.toml
.claude/: settings.json
.flotilla/: Dockerfile.dev-env
.github/workflows/: ci.yml  claude-code-review.yml  coverage.yml
crates/bollard/: Cargo.toml
crates/bollard/src/: cli.rs  main.rs  runtime.rs  server.rs  session.rs
crates/bollard/tests/: cli.rs  lifecycle.rs  runtime.rs  vt.rs
crates/cleat/: build.rs
crates/flotilla-client/: Cargo.toml  build.rs
crates/flotilla-commands/: Cargo.toml
crates/flotilla-controllers/: Cargo.toml
crates/flotilla-core/: Cargo.toml
crates/flotilla-daemon/: Cargo.toml
crates/flotilla-daemon/src/: aggregator.rs  cli.rs  convoy_projection.rs  issue_materializer.rs  lib.rs  peer_networking.rs  runtime.rs  server.rs  supervisor.rs
crates/flotilla-daemon/src/peer/: channel_tests.rs  channel_transport.rs  manager.rs  merge.rs  mod.rs  ssh_transport.rs  test_support.rs  transport.rs
crates/flotilla-daemon/src/peer/manager/: tests.rs
crates/flotilla-daemon/src/runtime/: test_git_repo.rs
crates/flotilla-daemon/src/server/: client_connection.rs  environment_sockets.rs  peer_connection.rs  peer_runtime.rs  remote_commands.rs  replicator.rs  request_dispatch.rs  resource_http.rs  test_support.rs  tests.rs
crates/flotilla-daemon/tests/: aggregator.rs  convoy_create_cli.rs  convoy_projection.rs  multi_host.rs  overlay_replication.rs  peer_connect_flow.rs  placement_policy_cli.rs  project_cli.rs  request_session_pair.rs  socket_roundtrip.rs
crates/flotilla-manifest/: Cargo.toml
crates/flotilla-manifest/fixtures/: README.md  observed_identities.json  patch_group_catalog.json  patch_identity_session.json  patch_pane_plugin.json  patch_pane_stamp.json  patch_tab_factory.json  patch_value_variants.json
crates/flotilla-manifest/fixtures/generator/: Cargo.toml
crates/flotilla-manifest/fixtures/generator/src/: main.rs
crates/flotilla-manifest/src/: keys.rs  lib.rs  pm.rs  projection.rs  recipe.rs  sink.rs  stamp.rs  wire.rs
crates/flotilla-manifest/src/projection/: tests.rs
crates/flotilla-manifest/src/wire/: tests.rs
crates/flotilla-protocol/: Cargo.toml  build.rs
crates/flotilla-resources/: Cargo.toml
crates/flotilla-resources/examples/: convoy_controller.rs  k8s_crud.rs  review-and-fix.yaml
crates/flotilla-resources/src/: backend.rs  checkout.rs  clone.rs  convoy.rs  error.rs  host.rs  in_memory.rs  labels.rs  lib.rs  placement_policy.rs  presentation.rs  principal_attention.rs  project.rs  provisioning_identity.rs  registry.rs  replica.rs  repository.rs  resource.rs  retention.rs  sqlite.rs  status_patch.rs  task_workspace.rs  terminal_session.rs  tls.rs  vessel.rs  watch.rs  workflow_template.rs
crates/flotilla-resources/src/controller/: mod.rs
crates/flotilla-resources/src/convoy/: reconcile.rs
crates/flotilla-resources/src/crds/: convoy.crd.yaml  demand.crd.yaml  presentation.crd.yaml  project.crd.yaml  regard.crd.yaml  repository.crd.yaml  vessel.crd.yaml  workflow_template.crd.yaml
crates/flotilla-resources/src/http/: bootstrap.rs  kubeconfig.rs  mod.rs
crates/flotilla-resources/tests/: controller_loop.rs  convoy_in_memory.rs  convoy_reconcile.rs  convoy_status_patch.rs  http_wire.rs  in_memory.rs  k8s_integration.rs  lifecycle_status_patch.rs  principal_attention_status_patch.rs  provisioning_http_wire.rs  provisioning_resources_in_memory.rs  provisioning_status_patch.rs  repository_in_memory.rs  resource_projection.rs  sqlite.rs  status_patch.rs  workflow_template_validation.rs
crates/flotilla-resources/tests/common/: contract.rs  mod.rs
crates/flotilla-test-support/: Cargo.toml
crates/flotilla-transport/: Cargo.toml
crates/flotilla-tui/: Cargo.toml
docs/: cmux-directory-exposure-prompt.md  configuration.md  development.md  duplication-extraction-report.md  keybindings.md  multi-host-manual-testing.md  roadmap.md  workspace-templates.md
docs/adr/: 0001-k8s-isomorphic-resource-model.md  0002-multi-host-is-resource-store-federation.md  0003-observed-adopted-managed-resources.md  0004-observed-resources-ephemeral-and-generational.md  0005-dashboard-is-a-composition-of-panels.md  0006-resources-vs-reference-data.md  0007-requirements-first-placement.md  0008-agentic-first-orchestration.md  0009-persistent-agents.md  0010-crew-provisioning.md  0011-aggregator-data-plane-is-named-query-result-sets.md  0012-tables-are-the-consumer-side-view-layer.md  0013-views-are-the-addressable-unit.md  0014-curated-scoped-queries-demand-backed-materialization.md  0015-intent-completion-at-admission.md  0016-overlay-replication-for-cross-root-state.md  0017-convoy-completion-claims-conditions-attention.md  0018-presentation-attention-demands-regards-projection.md  0019-forge-access-demand-placed-observation.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: daemon-and-clients.md  providers-and-correlation.md
docs/charters/: governor.md
docs/plans/: 2026-03-02-cmux-controller-design.md  2026-03-02-cmux-controller-plan.md  2026-03-02-cmux-controller-v2-plan.md  2026-03-03-multi-repo-implementation.md  2026-03-04-git-checkout-manager-design.md  2026-03-04-provider-abstractions-design.md  2026-03-04-tmux-workspace-manager-plan.md  2026-03-04-zellij-workspace-manager-design.md  2026-03-04-zellij-workspace-manager-plan.md  2026-03-05-async-refresh-design.md  2026-03-05-async-refresh-plan.md  2026-03-06-issue-branch-linking-design.md  2026-03-06-issue-branch-linking-plan.md  2026-03-06-workitem-enum-plan.md  (+12 more)
examples/: debug_sessions.rs  glyph_showcase.rs
layouts/: daily-driver.kdl
lints/long_inline_paths/: Cargo.toml  rust-toolchain
lints/long_inline_paths/src/: lib.rs
lints/long_inline_paths/ui/: main.rs  main.stderr
scripts/: prune-target.sh  run-daily-driver.sh  test-prune-target.sh
src/: actions.rs  app.rs  config.rs  data.rs  lib.rs  main.rs  provider_data.rs  refresh.rs  template.rs  ui.rs
tests/: flotillad_binary.rs
(+481 files in other folders)
