[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
color-eyre = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tui-input = "0.10"
dirs = "6"
toml = "0.8"
async-trait = "0.1"
indexmap = "2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
time = { version = "0.3.47", features = ["local-offset"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
reqwest = { version = "0.13.2", features = ["json"] }
unicode-width = "0.2.2"
