[package]
name = "flotilla-manifest"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["process", "net", "io-util"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tempfile = "3"
