[package]
name = "flotilla-manifest"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
async-trait = { workspace = true }
bon = { workspace = true }
flotilla-protocol = { path = "../flotilla-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["process", "net", "io-util", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
flotilla-test-support = { path = "../flotilla-test-support" }
tokio = { version = "1", features = ["macros", "rt", "fs"] }
tempfile = "3"
