[package]
name = "flotilla-resources"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
aws-lc-provider = ["rustls/aws_lc_rs"]
skip-no-sandbox-tests = []

[dependencies]
flotilla-protocol = { path = "../flotilla-protocol" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
bon = { workspace = true }
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { workspace = true, features = ["json", "query", "stream"] }
rustls = { workspace = true }
serde_yml = "0.0.12"
base64 = "0.22"
bytes = "1"
tracing = "0.1"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
tokio-rusqlite = "0.7"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
flotilla-controllers = { path = "../flotilla-controllers" }
flotilla-core = { path = "../flotilla-core" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rstest = { workspace = true }
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
